--- a/Day9/style.css
+++ b/Day9/style.css
@@ -18,7 +18,7 @@ body, html {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  font-family: sans-serif;
+  font-family: "General Sans", sans-serif;
 }
 
 #main-container {
