Day 15 - Update video card height and center align page header

--- a/Day15/style.css
+++ b/Day15/style.css
@@ -533,7 +533,12 @@ body {
   }
 
   .video-card {
-    height: 280px;
+    height: 400px;
+  }
+
+  .page-header {
+    justify-self: center;
+    text-align: center;
   }
 
   .page-title {
